--- a/src/styles/components/_youtube.scss
+++ b/src/styles/components/_youtube.scss
@@ -235,7 +235,7 @@
     width: 100vw;
     max-height: 90px;
     color: $secondary;
-    padding: 20px;
+    padding: 20px 0 0 10px;
     font-size: 24px;
   }
 }
